fixing behavior issues and overflow

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,9 @@
 @use '../../scss' as *;
 
+#root {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
