--- a/src/components/NavBar/MobileNav.scss
+++ b/src/components/NavBar/MobileNav.scss
@@ -7,6 +7,8 @@
 
         padding: $spacing-025rem $spacing-1rem $spacing-025rem $spacing-1rem;
         box-shadow: $header-shadow;
+
+        background-color: $color-white;
     }
 
     .nav-button {
